snapshots/public/github-rest-3.1/lib/models/validation_error/errors_value.dart
// GENERATED CODE - DO NOT MODIFY BY HAND
// Source: #/components/schemas/ValidationError (inline: Errors > Value)

import 'package:degenerate_runtime/degenerate_runtime.dart';typedef ErrorsValue = OneOf3<String?,int?,List<String>?>;
